src/objects/Cope_History__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Cope Histories</relationshipLabel>
        <relationshipName>Cope_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CopeM0__c</fullName>
        <label>CopeM0</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CopeM12__c</fullName>
        <label>CopeM12</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CopeM1__c</fullName>
        <label>CopeM1</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmployerId__c</fullName>
        <label>EmployerId</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cope History</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cope History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cope Histories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>